fix word wrap

--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,12 @@
-<style> 
-div{ 
-border:1px   solid   blue; 
-background-color:pink; 
-height:300px; 
-width:300px; 
-} 
-img   {
-width:48px; 
-height:48px; 
-} 
-img.left{ 
-float:left; 
-}; 
-img.right{ 
-float:right; 
-}; 
-</style> 
+<style>
+img {
+width:48px;
+height:48px;
+}
+img.left{
+float:left;
+};
+img.right{
+float:right;
+};
+</style>
